--- a/payment_service/templates/item.html
+++ b/payment_service/templates/item.html
@@ -1,22 +1,41 @@
 <html>
-  <head>
-    <title>Buy Item 1</title>
-  </head>
-  <body>
-    <h1>Item 1</h1>
-    <p>Description of Item 1</p>
-    <p>1111</p>
-    <button id="buy-button">Buy</button>
-    <script type="text/javascript">
-      var stripe = Stripe('pk_test_a9nwZVa5O7b0xz3lxl318KSU00x1L9ZWsF');
-      var buyButton = document.getElementById(buy-button');
-      buyButton.addEventListener('click', function() {
-        // Create a new Checkout Session using the server-side endpoint
-        // Redirect to Stripe Session Checkout
-        fetch('/buy/1', {method: 'GET'})
-        .then(response => return response.json())
+
+<head>
+  <title>{{ item.name}}</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://js.stripe.com/v3/"></script>
+</head>
+
+<body>
+  <div class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="card border-0 shadow-lg" style="max-width: 500px;">
+      <div class="card-body p-4">
+        <h1 class="card-title h2 fw-bold text-dark mb-3">{{ item.name}}</h1>
+
+        <img src="" class="card-img-top" alt="{{ item.name}}">
+
+        <p class="card-text text-secondary mb-4">{{ item.description }}</p>
+
+        <div class="d-flex align-items-center mb-4">
+          <p class="h4 text-primary fw-bold">{{ item.price_display }}</p>
+        </div>
+
+        <button id="buy-button" class="btn btn-primary btn-lg w-100 py-3">
+          Купить
+        </button>
+      </div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    var stripe = Stripe('{{ stripe_publishable_key }}');
+    var buyButton = document.getElementById('buy-button');
+    buyButton.addEventListener('click', function () {
+      fetch('/buy/{{ item.pk }}/', { method: 'GET' })
+        .then(response => response.json())
         .then(session => stripe.redirectToCheckout({ sessionId: session.id }))
-      });
-    </script>
-  </body>
+    });
+  </script>
+</body>
+
 </html>
