Откат к состоянию коммита 8716703

--- a/payment_service/templates/components/item_card.html
+++ b/payment_service/templates/components/item_card.html
@@ -13,13 +13,13 @@
             </button>
 
             <div class="btn-group" role="group">
-                <button id="decrement-button-id-{{ item.pk }}" class="btn btn-outline-secondary btn-lg py-3" type="button">
+                <button id="decrement-button-id-{{ item.pk }}" class="btn btn-outline-secondary btn-lg py-3" id="decrement-button">
                     <span class="bi bi-dash-lg">-</span>
                 </button>
-                <button class="btn btn-outline-dark btn-lg py-3 px-4 disabled quantity-display" data-item-id="{{ item.pk }}" type="button">
-                    <span id="count-items-id-{{ item.pk }}" class="fs-5 fw-bold">0</span>
+                <button class="btn btn-outline-dark btn-lg py-3 px-4 disabled" id="quantity-display">
+                    <span id="count-items-id-{{ item.pk }}" class="fs-5 fw-bold">1</span>
                 </button>
-                <button id="increment-button-id-{{ item.pk }}" class="btn btn-outline-secondary btn-lg py-3" type="button">
+                <button id="increment-button-id-{{ item.pk }}" class="btn btn-outline-secondary btn-lg py-3" id="increment-button">
                     <span class="bi bi-plus-lg">+</span>
                 </button>
             </div>
@@ -28,8 +28,8 @@
 </div>
 
 <script type="text/javascript">
-    if (typeof window.stripe === 'undefined') {
-            window.stripe = Stripe('{{ stripe_publishable_key }}');
+    if (typeof stripe === 'undefined') {
+            stripe = Stripe('{{ stripe_publishable_key }}');
         }
 
     let countItems_id_{{ item.pk}} = 1
@@ -37,14 +37,18 @@
     const incrementButton_id_{{ item.pk }} = document.getElementById('increment-button-id-{{ item.pk }}')
     const decrementButton_id_{{ item.pk }} = document.getElementById('decrement-button-id-{{ item.pk }}')
 
+    // const minItemValue_id_{{ item.pk }} = 1
+
+
+
     incrementButton_id_{{ item.pk }}.addEventListener('click', function() {
-        countItems_{{ item.pk }} ++
+        countItems_id_{{ item.pk}} ++
         countItemsElement_id_{{ item.pk }}.textContent = countItems_id_{{ item.pk }};
     })
 
     decrementButton_id_{{ item.pk }}.addEventListener('click', function() {
         if (countItems_id_{{ item.pk }} > 1) {
-            countItems_{{ item.pk }} --
+            countItems_id_{{ item.pk }} --
             countItemsElement_id_{{ item.pk }}.textContent = countItems_id_{{ item.pk }};
         }
     })
