--- a/payment_service/templates/items.html
+++ b/payment_service/templates/items.html
@@ -8,25 +8,13 @@
     <script src="https://js.stripe.com/v3/"></script>
 </head>
 <body>
-    <div class="container py-4">
-        <div class="d-flex justify-content-between align-items-center mb-4">
-            <h1>Товары</h1>
-            <a href="{% url 'create_order' %}" class="btn btn-success btn-lg">
-                <i class="bi bi-cart-plus me-2"></i>Создать заказ
-            </a>
+    <h1>Товары</h1>
+    {% for item in items %}
+        <div class="container m-2">
+            {% include "components/item_card.html" %}
         </div>
-
-        <div class="row">
-            {% for item in items %}
-                <div class="col-md-6 col-lg-4 mb-4">
-                    {% include "components/item_card.html" %}
-                </div>
-            {% empty %}
-            <div class="col-12">
-                <p class="text-muted text-center">Товаров пока нет</p>
-            </div>
-            {% endfor %}
-        </div>
-    </div>
+    {% empty %}
+    <p>Товаров пока нет</p>
+    {% endfor %}
 </body>
 </html>
